creusot/tests/should_fail/opaque_unproveable.coma

module OpaqueUnproveable_Test
  let%span sopaque_unproveable0 = "../opaque_unproveable.rs" 16 18 16 29
  use prelude.prelude.Intrinsic
  predicate opaque'0 [#"../opaque_unproveable.rs" 9 4 9 27] (_1 : ())
  let rec opaque'0 (_1:()) (return'  (ret:bool))= any
    [ return' (result:bool)-> {result = opaque'0 _1} (! return' {result}) ]
    
  let rec test (_1:()) (return'  (ret:()))= (! bb0
    [ bb0 = s0 [ s0 = {[@expl:assertion] [%#sopaque_unproveable0] opaque'0 ()} s1 | s1 = return' {_0} ]  ]
    ) [ & _0 : () = any_l () ]  [ return' (result:())-> (! return' {result}) ] 
end
